<resources>
    <string name="app_name">ACT8_Alvaro_Romero</string>
    <string name="name">Name:</string>
    <string name="enter_name">Enter your name</string>
    <string name="anonymous">Anonymous</string>
    <string name="favourite_os">Favourite operating system</string>
    <string name="speciality">Speciality</string>
    <string name="hours_study">Hours of study</string>
    <string name="validate">Validate</string>
    <string name="restart">Restart</string>
    <string name="how_many">How many</string>
    <string name="summary">Summary</string>
    <string name="person_participated">person has participated</string>
    <string name="people_participated">people have participated</string>
    <string name="thank_you">Thank you</string>
    <string name="go_back">Go back</string>
    <string name="err_NoName">Provide your name, or, at least, check the anonymous swich</string>
    <string name="answer_registered">your answer has been registered</string>
    <string name="hour_study">Hour of study</string>
    <string name="selected_value">Selected value:</string>
    <string name="element_deleted">The element was deleted successfully</string>
    <string name="err_Delete">An error has occurred while the element was being deleted</string>
</resources>